css-problem-solved

--- a/component/tab/styles.css
+++ b/component/tab/styles.css
@@ -551,7 +551,7 @@ section.mydiv10 ul li img {
         /* padding: 200px 0px;
 
         padding-left: 0;
-    } */ */
+    } */ 
 
     section.mydiv9 h1 {
         font-size: 20px;
