--- a/scss/demo/crm.module.scss
+++ b/scss/demo/crm.module.scss
@@ -39,16 +39,20 @@
     }
   }
 }
-
 .valuecontent1 {
-
-  background-image: linear-gradient(to right, #e62222, #e62222, #ef6d35, #ef6d35, #ef6d35);
+  background-image: linear-gradient(
+    to right,
+    #e62222,
+    #e62222,
+    #ef6d35,
+    #ef6d35,
+    #ef6d35
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 0;
-
 }
 
 .feature_Box {
@@ -58,61 +62,58 @@
   height: inherit;
 
   h1 {
-
-    background-image: linear-gradient(to right, #e62222, #e62222, #ef6d35, #ef6d35, #ef6d35);
+    background-image: linear-gradient(
+      to right,
+      #e62222,
+      #e62222,
+      #ef6d35,
+      #ef6d35,
+      #ef6d35
+    );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 36px;
     margin-bottom: 0;
-    /* text-transform: uppercase; */
     text-align: center;
     font-weight: 600;
     padding: 5px 1px 7px 0px;
   }
 
   h2 {
-    border: 2px solid #FF1305;
+    border: 2px solid #ff1305;
     padding: 18px 34px;
     text-align: center;
-
   }
-
 }
-
-// .top_Para {
-//   font-size: 31px;
-//   margin-left: 184px;
-//   margin-top: 20px;
-//   margin-right: 28px;
-// }
 
 .top_Para {
   font-size: 21px;
-  /* margin-left: 100px; */
   display: flex;
   justify-content: center;
   margin-top: 30px;
   gap: 136px;
- 
 }
 
 .center_box {
-  background-image: linear-gradient(to right, #e62222, #e62222, #ef6d35, #ef6d35, #ef6d35);
+  background-image: linear-gradient(
+    to right,
+    #e62222,
+    #e62222,
+    #ef6d35,
+    #ef6d35,
+    #ef6d35
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 50px;
   font-family: sans-serif;
-  /* margin-bottom: 30px; */
   text-align: center;
 }
 
 .titile_box {
   text-align: center;
   font-weight: 100;
-
 }
-
-
 
 .feature_Box3 {
   border: none !important;
@@ -121,23 +122,16 @@
   font-weight: 700;
   font-size: 43px;
 }
-
-
-
-
-
 .center_align {
-
   text-align: center;
   padding: 0px;
   font-size: 13px;
-
 }
+
 .center_align3 {
-  /* margin-top: 0; */
   margin-bottom: 1rem;
   text-align: center;
-  /* padding: 11px 15px; */
+
   font-size: 18px;
 }
 
@@ -148,10 +142,9 @@
   justify-content: center;
   display: flex;
   margin-left: 120px !important;
-
 }
 
-.box551+h2 {
+.box551 + h2 {
   position: relative;
   margin-bottom: 0;
   padding-bottom: 0;
@@ -159,7 +152,7 @@
   font-weight: 100 !important;
 }
 
-.box551+h2+p {
+.box551 + h2 + p {
   position: relative;
   margin-bottom: 0;
   padding-bottom: 0;
@@ -167,42 +160,41 @@
   font-weight: 200 !important;
   color: #fff !important;
   margin-bottom: 30px;
-  // opacity: 0.7;
+
   margin-top: 15px;
 }
-
 
 @media (max-width: 600px) {
   .feature_Box {
     padding: 0px 0px;
   }
 
-
   .top_Para {
     font-size: 18px;
     margin-left: 0px;
-
-
- 
     display: flex;
     justify-content: center;
     margin-top: 30px;
-    
+
     flex-direction: column;
-      grid-gap: 0px; 
-   gap:0px;
+    grid-gap: 0px;
+    gap: 0px;
   }
 }
 
-
-
 .mydiv8 {
   h3 {
-    /* color: #fff; */
     text-align: center;
     font-size: 19px;
     font-family: sans-serif;
-    background-image: linear-gradient(to right, #e62222, #e62222, #ef6d35, #ef6d35, #ef6d35) !important;
+    background-image: linear-gradient(
+      to right,
+      #e62222,
+      #e62222,
+      #ef6d35,
+      #ef6d35,
+      #ef6d35
+    ) !important;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 40px;
@@ -211,7 +203,6 @@
   }
 
   h2 {
-    // /* color: #fff; */
     text-align: center;
     font-size: 19px;
     font-family: sans-serif;
@@ -230,12 +221,10 @@
   .bannerImage1 {
     position: relative;
     height: 118vh;
-    /* bottom: 100px; */
   }
 }
 
 @media (max-width: 600px) {
-
   .top_box {
     p {
       font-size: 11px;
@@ -254,10 +243,7 @@
       padding: 0px;
       padding-top: 10px;
     }
-
-
   }
-
 
   .bannerImage {
     img {
@@ -272,7 +258,14 @@
   }
 
   .h1box {
-    background-image: linear-gradient(90deg, #e62222, #e62222, #ef6d35, #ef6d35, #ef6d35);
+    background-image: linear-gradient(
+      90deg,
+      #e62222,
+      #e62222,
+      #ef6d35,
+      #ef6d35,
+      #ef6d35
+    );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 600;
@@ -280,11 +273,9 @@
     padding: 0px 17px;
   }
 
-
   .mobileRes {
     max-width: 100% !important;
   }
-
 
   .row33 {
     display: flex;
@@ -293,7 +284,6 @@
     align-items: center;
   }
 
-
   .image_margin {
     h4 {
       text-align: center;
@@ -301,6 +291,4 @@
       font-size: 18px;
     }
   }
-
-
 }
