--- a/scss/demo/demo.module.scss
+++ b/scss/demo/demo.module.scss
@@ -139,7 +139,7 @@ h2.sectionheading {
     font-weight: 700;
     position: relative;
     top: -30px;
-    right: -55px;
+    right: -46px;
   }
   h3 {
     font-size: 48px;
@@ -527,3 +527,7 @@ section.deliversection h3 {
     font-size: 16px;
   }
 }
+
+// .paddingZero {
+//   padding: 0px;
+// }
