--- a/scss/demo/demo.module.scss
+++ b/scss/demo/demo.module.scss
@@ -531,3 +531,9 @@ section.deliversection h3 {
 // .paddingZero {
 //   padding: 0px;
 // }
+
+.mail_sucess {
+  text-align: center;
+  color: green;
+  margin-top: 10px;
+}
